Added Facebook Lead Functionality

--- a/bflofirst/static/css/login_b.css
+++ b/bflofirst/static/css/login_b.css
@@ -6778,6 +6778,7 @@ body {
 /* PINGENDO COMMENT DO NOT REMOVE */
 .userbox {
   background: #FFFFFF;
+  font-size: 12;
 }
 .userform {
   background: #FFFFFF;
