--- a/bflofirst/static/css/login_b.less
+++ b/bflofirst/static/css/login_b.less
@@ -734,6 +734,7 @@ monospace;
 
 .userbox {
   background: #FFFFFF;
+  font-size: 12;
 }
 
 .userform {
@@ -756,3 +757,5 @@ monospace;
 }
 
 .footer {}
+
+.fblogo {}
