--- a/bflofirst/templates/index_b.html
+++ b/bflofirst/templates/index_b.html
@@ -103,6 +103,9 @@
                                     </form>
                                 </div>
                             </div>
+                            <div class="row"><div class="col-md-12"><a href="{{url_for("facebook")}}" class="fblogo">
+                            Click Here For Facebook Leads
+                            <img src="http://blog.adstage.io/wp-content/uploads/2014/07/facebook-logo.png" class="center-block img-responsive" style="height: 10%";></a></div></div>
                             <div class="row">
                                 <div class="col-md-12">
                                     <hr>
