Added more Chat Funcitonality

--- a/bflofirst/templates/expires.html
+++ b/bflofirst/templates/expires.html
@@ -144,5 +144,10 @@ align="right" height=100px>
 	</span>
 </div>
 
+<!-- Chat Module -->
+<link rel="import" id="chat_module" href="{{url_for("static", filename="chat.html")}}">
+<link href="{{url_for("static", filename="css/chat.css")}}" rel="stylesheet" type="text/css">
+<script type="text/javascript" src="{{url_for("static", filename="js/chat.js")}}"></script>
+
 </body>
 </html>
