--- a/bflofirst/templates/results.html
+++ b/bflofirst/templates/results.html
@@ -4,8 +4,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
         <script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
+        
         <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+
         <script type="text/javascript">
             $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
         </script>
@@ -56,7 +58,10 @@
         )}}" rel="stylesheet" type="text/css">
 	{{ec}}-->
         <link rel="stylesheet" href="../static/css/login_b.css">
-    </head><body>
+    </head>
+    
+    <body>
+    
         <div class="cover">
             <div class="background-image-fixed cover-image" style="background-image : url('http://wallpaper.zone/img/4872271.jpg')"></div>
             <div class="container">
@@ -155,6 +160,11 @@
                 </div>
             </div>
         </div>
-    
+
+<!--Chat Module-->
+<button class="topcorner" id="myBtn">Open Chat</button>
+<link rel="import" id="chat_module" href="{{url_for("static", filename="chat.html")}}">
+<link href="{{url_for("static", filename="css/chat.css")}}" rel="stylesheet" type="text/css">
+<script type="text/javascript" src="{{url_for("static", filename="js/chat.js")}}"></script>
 
 </body></html>
