--- a/bflofirst/templates/results_fb.html
+++ b/bflofirst/templates/results_fb.html
@@ -4,8 +4,11 @@
     <title>Query Results</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    
     <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
+    
     <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css"
     rel="stylesheet" type="text/css">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
@@ -146,6 +149,12 @@
         </div>
       </div>
     </div>
+    
+    <!--Chat Module-->
+<button class="topcorner" id="myBtn">Open Chat</button>
+<link rel="import" id="chat_module" href="{{url_for("static", filename="chat.html")}}">
+<link href="{{url_for("static", filename="css/chat.css")}}" rel="stylesheet" type="text/css">
+<script type="text/javascript" src="{{url_for("static", filename="js/chat.js")}}"></script>
   </body>
 
 </html>
