Setting up GET/POST API

--- a/bflofirst/static/css/main.css
+++ b/bflofirst/static/css/main.css
@@ -96,21 +96,25 @@ h1 {
 }
 
 #text_input{
-    width: 100%;
+    font-family: 'Roboto', sans-serif;
+    font-size: 12px;
+    color: black;
+    width: 98%;
     margin: 2px;
     height: 10%;
     resize: none;
     border-radius: 3px;
+    border-width: 2px;
     border-style: solid;
-    border-color: #2e6fa7;
+    border-color: darkgray;
     background-color: #7ddee5;
 }
 #text_input:hover{
-    border-color: #2e6fa7;
+    border-color: gray;
     background-color: #61a4aa;
 }
 #text_input:focus{
-    border-color: #2e6fa7;
+    border-color: lightgray;
     background-color: #5efff3;
 }
 #text_form{
