--- a/bflofirst/templates/beta.html
+++ b/bflofirst/templates/beta.html
@@ -37,9 +37,20 @@
                             <div class="message-text">
                             </div>
                         </div>
+
+                        <!-- LEAD LINKED -->
+                        <div class="message" style="visibility: hidden">
+                            <div id="username"></div>
+                            <div class="message-avatar">
+                                <img id="avatar" src="http://tinygraphs.com/labs/isogrids/hexa/nathan?theme=bythepool&numcolors=4&size=220&fmt=svg">
+                            </div>
+                            <div class="message-text">
+                            </div>
+                        </div>
+
                     </div>
                     <div id="text_form">
-                        <textarea id="text_input" maxlength="512"></textarea>
+                        <div id="text_input" maxlength="512" contenteditable="true"></div>
                     </div>
                 </div>
 
@@ -56,9 +67,7 @@
                 <div class="paginate paginate-dark wrapper">
                     <ul>
                         <li><a id="prev">&lang;</a></li>
-                        <li><a>0</a></li>
                         <li><a class="more">&hellip;</a></li>
-                        <li><a>9</a></li>
                         <li><a id="next">&rang;</a></li>
                     </ul>
                 </div>
