--- a/bflofirst/templates/index_b.html
+++ b/bflofirst/templates/index_b.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="../static/css/login_b.css">
     </head><body>
         <div class="cover">
-            <div class="background-image-fixed cover-image" style="background-image : url('http://wallpaper.zone/img/4872271.jpg')"></div>
+            <div class="background-image-fixed cover-image" style="background-image : url('http://i.imgur.com/qHvSA.jpg')"></div>
             <span id="chat_area"></span>
             <div class="container">
                 <div class="row">
