--- a/bflofirst/templates/login_b.html
+++ b/bflofirst/templates/login_b.html
@@ -16,7 +16,7 @@
   
   <body>
     <div class="cover">
-      <div class="cover-image" style="background-image : url('http://wallpaper.zone/img/4872271.jpg')"></div>
+      <div class="cover-image" style="background-image : url('http://i.imgur.com/qHvSA.jpg')"></div>
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center userbox">
