Changing Lead Layout

--- a/bflofirst/templates/login_b.html
+++ b/bflofirst/templates/login_b.html
@@ -26,7 +26,7 @@
                   <h1 class="text-primary">
                     <b>Buffalo Data Server</b>
                   </h1>
-                  <p class="text-primary">Now with Bootstrap for a pretty UI experience.</p>
+                  <p class="text-primary">Now we're cooking with Materialize.</p>
                   <p class="text-danger">{% with messages = get_flashed_messages() %} 
                     {% if messages %} 
                     {% for m in messages %}
