--- a/bflofirst/templates/results_fb.html
+++ b/bflofirst/templates/results_fb.html
@@ -135,12 +135,12 @@
                   <ul class="pager">
                     <li>
                       <!--{{sc}} {% if page> 0 %} {{ec}}-->
-                      <a href="{{url_for('expires', page = page-1)}}">←  Prev</a>
+                      <a href="{{url_for('facebook', page = page-1)}}">←  Prev</a>
                       <!--{{sc}} {% endif %} {{ec}}-->
                     </li>
                     <li>
                       <!--{{sc}} {% if page < max_page %} {{ec}}-->
-                      <a href="{{url_for('expires', page = page+1)}}">Next  →</a>
+                      <a href="{{url_for('facebook', page = page+1)}}">Next  →</a>
                       <!--{{sc}} {% endif %} {{ec}}-->
                     </li>
                   </ul>
